--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/genai": "^1.39.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "mongoose": "^9.2.0",
     "nodemailer": "^8.0.1",
-    "openai": "^6.21.0"
+    "openai": "^6.21.0",
+    "p-retry": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
