--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^9.2.0",
     "nodemailer": "^8.0.1",
     "openai": "^6.21.0",
-    "p-retry": "^5.1.2"
+    "p-retry": "^5.1.2",
+    "redis": "^5.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
